# connect-http-method-playground

.devcontainer/: compose.yaml
.devcontainer/api/: Dockerfile  compose.yaml  devcontainer.json
.devcontainer/grpc-client/: Dockerfile  compose.yaml  devcontainer.json
.devcontainer/grpc-client-python/: Dockerfile  compose.yaml  devcontainer.json
.devcontainer/http1-client/: Dockerfile  compose.yaml  devcontainer.json
api/: Dockerfile  README.md  go.mod  go.sum  main.go
api/proto/api/v1/: api.proto
grpc-client/: buf.gen.yaml  go.mod  main.go
grpc-client-python/: .gitignore  README.md  buf.gen.yaml  main.py  pyproject.toml
grpc-client/.claude/: settings.local.json
http1-client/: go.mod  main.go
