[project]
name = "grpc-client-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "connect-python>=0.5.0",
    "httpx>=0.27.0",
    "mypy-protobuf>=3.6.0",
    "protobuf>=6.33.0",
    "protoc-gen-connect-python>=0.5.0",
]
